--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,8 +12,9 @@
 
 
   <meta name="google-signin-client_id" content="1049709865001-vd3ddolmkf66rdo73624ocj16d6g5ueo.apps.googleusercontent.com">
-<script src="https://apis.google.com/js/platform.js" async defer></script>
- 
+<!--script src="https://apis.google.com/js/platform.js" async defer></script-->
+ <script async defer src="https://apis.google.com/js/api.js"></script>
+    <script async defer src="https://accounts.google.com/gsi/client" ></script>
     <script src="/foundation/js/vendor/jquery.js"></script>
    
     
